Add meaningful title of Assistant for screen reader users.

Add an accessible window title called "Assistant" for Assistant container
view, thus ChromeVox can read the window title when invoking multilayered
shortcut:Search + a > w.

Bug: 910559
Test: local compile and manually test.
Change-Id: Ia71e08567cf448abce1e9a5d59b9fe50f34be8a2
Reviewed-on: https://chromium-review.googlesource.com/c/1357650
Commit-Queue: Meilin Wang <meilinw@chromium.org>
Reviewed-by: Xiaohui Chen <xiaohuic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613291}
Former-commit-id: 280480c600d6ac15b68733c778917878fd0dfc3a